2002-11-20  Angus Leeming  <leeming@lyx.org>

	* forms/fdfix.sh: 
	* forms/fdfixh.sed: strengthen the sed in the sed script and further
	beautify the contents of the resultant .h file.

2002-11-20  Angus Leeming  <leeming@lyx.org>

	* MathsCallbacks.h: removed.
	* Makefile.am: remove MathsCallbacks.h.

	* FormMathsPanel.C (FormMathsPanel): use vector(begin, end) c-tor
	rather than our home-grown loops.

	* FormMathsPanel.h:
	* forms/fdfix.sh: no longer #include "MathsCallbacks.h".

	* FormMathsPanel.C (input):
	* forms/form_maths_panel.fd: don't pass/use MM_XYZ data.

2002-11-19  Angus Leeming  <leeming@lyx.org>

	* FormInset.[Ch]: removed; no longer used after John's port of the
	tabular dialog to MCV.

	* Makefile.am (libxforms_la_SOURCES): remove FormInset.[Ch].

	* FormBase.h (show):
	* FormExternal.h (apply, build, update, input):
	* FormSpellchecker.h (apply, build, update, partialUpdate):
	propogate the virtual keyword.

2002-11-17  John Levon  <levon@movementarian.org>

	* FileDialog.C: open/save name change
 
2002-11-15  John Levon  <levon@movementarian.org>

	* Dialogs2.C:
	* Dialogs_impl.h:
	* FormPreferences.h:
	* FormPreferences.C:
	* FormTabular.h:
	* FormTabular.C:
	* forms/form_preferences.fd:
	* forms/form_tabular.fd: port tabular and prefs to MVC

	* FormBase.h: make hide() virtual for prefs
 
2002-11-08  Angus Leeming  <leeming@lyx.org>

	* xforms_resize.[Ch]: sigh. Hack the "get scaling" part of
	fl_adjust_form_size out of the xforms source and put it in here as
	get_scaling_factor. Resizing and then unresizing to get this info
	produces really nasty results...

	I've put a request into the xforms list.

2002-11-08  Angus Leeming  <leeming@lyx.org>

	* xforms_resize.[Ch]: replace scale_to_fit_tabs and scale_form with
	get_scale_to_fit and scale_form_horizontally, respectively. The
	functions are a total re-write, making use of the xforms library's
	fl_adjust_form_size routine. We therefore get enormously simplified